--- a/src/Core/Domain/SureProfit.Domain.csproj
+++ b/src/Core/Domain/SureProfit.Domain.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums/" />
+    <Folder Include="Entities/" />
+    <Folder Include="ValueObjects/" />
+    <Folder Include="Interfaces/" />
+  </ItemGroup>
+
 </Project>
