--- a/test/Unit/Core/Domain/SureProfit.Domain.Tests.csproj
+++ b/test/Unit/Core/Domain/SureProfit.Domain.Tests.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\..\..\..\src\Core\Domain\SureProfit.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities/" />
+  </ItemGroup>
+
 </Project>
