--- a/src/Api/SureProfit.Api.csproj
+++ b/src/Api/SureProfit.Api.csproj
@@ -9,7 +9,16 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infraestructure\Data\SureProfit.Infra.Data.csproj" />
+    <ProjectReference Include="..\Core\Application\SureProfit.Application.csproj" />
   </ItemGroup>
 
 </Project>
