--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnections": "Server=localhost;Database=SureProfit;User Id=SA;Password=A&5zv6EhK7;MultipleActiveResultSets=true;Trust Server Certificate=true"
+  }
 }
