--- a/src/Core/Application/SureProfit.Application.csproj
+++ b/src/Core/Application/SureProfit.Application.csproj
@@ -5,11 +5,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Company/" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.1" />
   </ItemGroup>
 
   <PropertyGroup>
